# Cybersecurity-Auditor-Agent

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  agent.py  app.py  compliance_agent_tools.py  data_preprocessing.py  docker-compose.yml  notes.txt  pyproject.toml  requirements.txt  schema.json  vector_processing.py
.github/workflows/: ci.yml
.streamlit/: config.toml
data/mappings/: control_mappings.json
docker/: entrypoint.sh
examples/: Dockerfile_root.txt  README.md  policy_minimal.txt  sshd_config_weak.conf  terraform_open_sg.tf
json_docs/: CELEX_32016R0679_EN_TXT.json  CIS_Controls__v8.1_Guide__2024_06.json  CompTIA_Security+.json  MITRE_ATTACK_Enterprise_11x17.json  NIST.CSWP.29.json  NIST.SP.800-37r2.json  NIST.SP.800-53r5.json  OWASP Application Security Verification Standard 4.0.3-en.json  PCI-DSS-v4_0_1.json  hipaa-simplification-201303.json  nistspecialpublication800-30r1.json
src/auditor/: __init__.py  config.py  models.py
src/auditor/agents/: audit_agent.py  compliance_agent.py  graph.py  reporting_agent.py  state.py
src/auditor/enrichment/: epss.py  kev.py  mappings.py  mitre.py
src/auditor/ingest/: frameworks_index.py  pdf_loader.py  web_fetcher.py
src/auditor/oscal/: exporter.py
src/auditor/prompts/: audit.py  compliance.py  reporting.py
src/auditor/retrieval/: retriever.py
src/auditor/tools/: _findings_llm.py  audit_codebase.py  audit_config.py  audit_logs.py  audit_policy_pdf.py  audit_text.py  compliance_qa.py  (+1 more)
tests/: conftest.py  test_audit_codebase.py  test_audit_config.py  test_audit_logs.py  test_chunking.py  test_enrichment.py  test_epss.py  test_graph.py  test_mappings.py  test_markdown_loader.py  test_oscal.py  test_reporting.py  test_retrieval.py  test_web_fetcher.py
